# usb-audio

./: .gitignore  CMakeLists.txt  README.md  notes.txt  sdkconfig
main/: 2mic-1spk.c  CMakeLists.txt  debug.c  idf_component.yml  main.c
main/include/: i2s_functions.h  tusb_config.h  usb_descriptors.h
main/src/: blink_led.c  i2s_functions.c  uad_callbacks.c  usb_descriptors.c
